BE: implementing sending user login and registration message to kafka